# UnityDisplayTweaker-Xposed

./: .gitattributes  README-jaJP.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/jp/miruku/unitydisplaytweaker/manager/: InitializationFailedDialogFragment.java  MainActivity.java  SettingsFragment.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: act2.xml  activity_main.xml  content_main.xml
app/src/main/res/menu/: navigation_menu.xml
app/src/main/res/navigation/: main_nav.xml
app/src/main/res/values/: arrays.xml  colors.xml  ic_launcher_background.xml  strings.xml  themes.xml  untranslatable.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: locales_config.xml  root_preferences.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
material-preference/: build.gradle.kts
material-preference/src/androidTest/java/jp/miruku/material/preference/: ExampleInstrumentedTest.java
material-preference/src/main/java/jp/miruku/material/preference/: EditTextPreferenceDialogFragmentMaterial.java  ListPreferenceDialogFragmentMaterial.java  PreferenceDialogFragmentMaterial.java  PreferenceFragmentMaterial.java
material-preference/src/main/res/layout/: m3_icon_frame.xml  m3_pref.xml  m3_pref_category.xml  m3_pref_dialog_edit.xml  m3_pref_switch.xml
material-preference/src/main/res/values/: themes.xml
material-preference/src/test/java/jp/miruku/material/preference/: ExampleUnitTest.java
udt-xposed/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
udt-xposed/src/main/cpp/: CMakeLists.txt
udt-xposed/src/main/cpp/dobby/: CMakeLists.txt
udt-xposed/src/main/cpp/src/: apply_config.h  asm_funcs.h  display_tweaker.h  lib_main.cpp  target_arch.h
udt-xposed/src/main/cpp/src/proc/: MemPatch.h  ProcMap.h  ProcMem.h  proc_mem.h
udt-xposed/src/main/cpp/src/unity/engine/: screen_manager.h
udt-xposed/src/main/cpp/src/unity/il2cpp/: fullscreen_mode.h  refresh_rate.h
udt-xposed/src/main/cpp/src/utils/: api_macros.h  lib_finder.h  log.h
udt-xposed/src/main/cpp/src/utils/arm/: arm32_util.h  arm64_util.h  bit_util.h  thumb2_util.h
udt-xposed/src/main/cpp/udt-native/: .gitattributes  CMakeLists.txt
udt-xposed/src/main/cpp/udt-native/src/: asm_funcs.h  display_tweaker.h  jni_impls.h  lib_main.cpp  module_constants.h  module_log.h
udt-xposed/src/main/cpp/udt-native/src/armutils/: arm32_util.h  arm64_util.h  thumb2_util.h
udt-xposed/src/main/cpp/udt-native/src/proc/: mem_patch.h  proc_map.h  proc_mem.h
udt-xposed/src/main/cpp/udt-native/src/unity/il2cpp/: fullscreen_mode.h
udt-xposed/src/main/cpp/udt-native/src/utils/: api_macros.h  logcat.h  logging.h  obfuscate.h
udt-xposed/src/main/cpp/xdl/: CMakeLists.txt
udt-xposed/src/main/cpp/xdl-static/: CMakeLists.txt
udt-xposed/src/main/java/jp/miruku/unitydisplaytweaker/module/: ActivityHook.java  Config.java  Constants.java  MainModule.java  ModuleConstants.java  OnCreateHook.java  Preferences.java  UDTNative.java  UnityPlayerHooks.java  (+1 more)
(+7 files in other folders)
